--- a/menu.html
+++ b/menu.html
@@ -99,6 +99,19 @@
   </div>
 </nav>
 
+  <!-- Secondary Header: Menu Tabs -->
+<nav class="menu-tabs" aria-label="Menu sections">
+  <div class="container">
+    <a href="#ramen">Ramen</a>
+    <a href="#rice-bowls">Rice Bowls</a>
+    <a href="#onigiri">Onigiri</a>
+    <a href="#musubi">Musubi</a>
+    <a href="#sando">Sando</a>
+    <a href="#drinks">Drinks</a>
+    <a href="#bingsu">Bingsu</a>
+  </div>
+</nav>
+
   <!-- Main content padded to clear fixed tabs -->
   <main class="menu with-tabs-fixed">
 
@@ -449,3 +462,4 @@
   </script>
 </body>
 </html>
+
